--- a/css/common.css
+++ b/css/common.css
@@ -12,3 +12,20 @@ body {
   color: #212121;
   line-height: 1.5;
 }
+
+ul, li {
+   list-style: none;
+   padding: 0; 
+  margin: 0; 
+}
+
+.item {
+   border-radius: 8px;
+padding: 16px;
+width: 392px;
+margin-bottom: 24px;
+box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+ background: #fff;
+ 
+}
+
