--- a/css/common.css
+++ b/css/common.css
@@ -19,5 +19,26 @@ ul, li {
   margin: 0; 
 }
 
+.gallery {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-top: 100px;
+  gap: 100px;
+}
 
+li {
+width: 350px;
+  height: 250px;
+}
 
+img {
+  width: 100%;
+  height: 100%;
+}
+
+img:hover {
+transform: scale(1.5); 
+  transition: transform 0.3; 
+}
